# ai-research-analyst

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: server.py
core/: agent.py  ingest.py  retriever.py
frontend/: package-lock.json
frontend/src/: App.jsx  Toast.jsx  index.css
prompts/: qa_prompt.py
