[project]
name = "ai-research-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
